# libvips_examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Notes.md  README.md  build.sh  pyproject.toml
built-libs/: README.md  get-libs.sh
libvips-cpp/: CMakeLists.txt  README.md
src/: .clang-format  test-c-api.cpp  test-cpp-api.cpp
src/vips-py/: vips-module.cpp
test/: vips_py_test.py
